# credential-bridge

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-fastapi.txt  requirements.txt  setup.py  zensical.toml
.github/workflows/: release.yml
docs/: wizard.md
docs/backends/: env-file.md  keyring.md
docs/cli/: env.md  keyring.md  vault.md
docs/getting-started/: installation.md  quickstart.md
src/credential_bridge/: __init__.py  _version.py  exceptions.py  prompt_wizard.py  utils.py  vault_manager.py  welcome_banner.txt
src/credential_bridge/backends/: __init__.py  base.py  env_file.py  keyring.py  vault.py
src/credential_bridge/cli/: _output.py  env_cli.py  keyring_cli.py  main.py  vault_cli.py
tests/: conftest.py
tests/integration/: test_env_integration.py  test_keyring_integration.py  test_vault_integration.py
tests/unit/: test_base.py  test_env_file_backend.py  test_exceptions.py  test_keyring_backend.py  test_manager.py  test_prompt_wizard.py  test_utils.py  test_vault_backend.py
