[build-system]
requires = ["setuptools>=68", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "credential-bridge"
description = "A Python library for unified secrets management across HashiCorp Vault, system keyring, and .env files."
authors = [
    {name = "Vertex AI Automations", email = "info@vertexaiautomations.com"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["vault", "hashicorp", "keyring", "credentials", "authentication", "secrets", "dotenv", "env-file", "secrets-management"]
license = "MIT"
license-files = ["LICENSE.txt"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://www.vertexaiautomations.com"
Documentation = "https://vertex-ai-automations.github.io/credential-bridge"
Repository = "https://github.com/vertex-ai-automations/credential-bridge"
"Bug Tracker" = "https://github.com/vertex-ai-automations/credential-bridge/issues/new"

[project.scripts]
cb          = "credential_bridge.cli.main:main"
vault-cli   = "credential_bridge.cli.vault_cli:main"
keyring-cli = "credential_bridge.cli.keyring_cli:main"
env-cli     = "credential_bridge.cli.env_cli:main"
run-wizard  = "credential_bridge.prompt_wizard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.fastapi = {file = ["requirements-fastapi.txt"]}

[tool.setuptools_scm]
version_file = "src/credential_bridge/_version.py"
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may require external services)",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
